--- a/style.less
+++ b/style.less
@@ -2,22 +2,21 @@
 @fontWeight: 300;
 @darkGrey: #444;
 @green: #008000;
-@mod-yellow: (lighten(desaturate(@green, 80%),50%) - #000055) ;
+@mod-yellow: (lighten(desaturate(@green, 80%), 50%) - #000055);
 @lightGrey: lighten(@darkGrey, 33.5%);
 @white: #fff;
-@brightGreen: darken(saturate(@mod-yellow, 20%),15%);
+@brightGreen: darken(saturate(@mod-yellow, 20%), 15%);
 @grey: lighten(@lightGrey, 27.6%);
 @gh: spin(@brightGreen, 20);
-
 .transition(@transition) {
-  -webkit-transition: @transition;
--moz-transition: @transition;
--o-transition: @transition;
-transition: @transition;
+	-webkit-transition: @transition;
+	-moz-transition: @transition;
+	-o-transition: @transition;
+	transition: @transition;
 }
 
-.transform(@transform){
-  -webkit-transform: @transform;
+.transform(@transform) {
+	-webkit-transform: @transform;
 	-moz-transform: @transform;
 	-o-transform: @transform;
 	-ms-transform: @transform;
@@ -32,7 +31,7 @@ html {
 body {
 	font-family: "Lato";
 	font-weight: @fontWeight;
-  	font-size:@fontSize;
+	font-size: @fontSize;
 }
 
 p {
@@ -44,7 +43,7 @@ p {
 h3 {
 	font-size: 45px;
 	font-weight: 600;
-	color:@green;
+	color: @green;
 	text-align: center;
 	text-transform: uppercase;
 	font-family: 'Shrikhand', cursive;
@@ -53,7 +52,7 @@ h3 {
 h4 {
 	font-size: 35px;
 	font-weight: 600;
-	color:@green;
+	color: @green;
 	text-align: center;
 }
 
@@ -62,23 +61,23 @@ h4 {
 }
 
 a {
-  color: #008000;
-  &:hover {
-  	color: @darkGrey;
-	text-decoration: none;
-	outline: 0;
-  }
-  &:active {
-  	text-decoration: none;
-  }
+	color: #008000;
+	&:hover {
+		color: @darkGrey;
+		text-decoration: none;
+		outline: 0;
+	}
+	&:active {
+		text-decoration: none;
+	}
 }
 
 .break {
-	padding:  15px 0;
+	padding: 15px 0;
 	img {
-	display: block;
-	margin: 0 auto;
-    }
+		display: block;
+		margin: 0 auto;
+	}
 }
 
 .navbar {
@@ -88,72 +87,65 @@ a {
 	padding-bottom: 15px;
 	background-color: @mod-yellow;
 	border: none;
-  
-   	& &-brand {
-	font-weight: bolder;
-	color: @lightGrey;
-	font-size: 28px;
-	letter-spacing: 1px;
+	& &-brand {
+		font-weight: bolder;
+		color: @lightGrey;
+		font-size: 28px;
+		letter-spacing: 1px;
 	}
-  
-  	& &-nav > li > a {
-	background-color: transparent;
-	color: @green; 
+	& &-nav>li>a {
+		background-color: transparent;
+		color: @green;
 	}
 }
 
 .headerwrap {
-      margin-top: -20px;
-      padding-top: 60px;
-      text-align: center;
-      min-height: 600px;
-      width: 100%;
-      background-image: url("img/trava.jpg");
-      background-size: cover;
-      background-repeat: no-repeat;
-	
+	margin-top: -20px;
+	padding-top: 60px;
+	text-align: center;
+	min-height: 600px;
+	width: 100%;
+	background-image: url("img/trava.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
 	h1 {
-      margin-top: 100px;
-      color: @white;
-      font-size: 70px;
-      font-weight: 300;
-      letter-spacing: 3px;
-      text-transform: uppercase;
-    }
-     h2 {
-      color: @white;
-      font-size: 40px;
-      letter-spacing: 2px;
+		margin-top: 100px;
+		color: @white;
+		font-size: 70px;
+		font-weight: 300;
+		letter-spacing: 3px;
+		text-transform: uppercase;
+	}
+	h2 {
+		color: @white;
+		font-size: 40px;
+		letter-spacing: 2px;
 	}
 }
 
-.gallery     {
+.gallery {
 	margin: 5px 15px;
 	padding: 15px 10px;
 	border: 5px solid @brightGreen;
 	img {
-	width: 80%;
-	height: 80%;
+		width: 80%;
+		height: 80%;
 	}
 	p {
 		margin-top: 10px;
-	padding: 20px 5px;
-	color: @gh;
-	font-size: 20px;
-    }
+		padding: 20px 5px;
+		color: @gh;
+		font-size: 20px;
+	}
 }
 
 .symbols {
-	
-		p {
-			color: @brightGreen;
-		}
-	
-		img {
+	p {
+		color: @brightGreen;
+	}
+	img {
 		width: 50%;
-		
-		}
-	
+	}
 }
 
 .history {
@@ -161,33 +153,31 @@ a {
 	margin: 0 auto;
 	width: 80%;
 	text-align: center;
-	background: grey;
+	background: @grey;
 	margin-top: 20px;
-  	& p {
-      font-size: 25px;
-	color: #709316;
-    }
+	& p {
+		font-size: 25px;
+		color: #709316;
+	}
 }
 
-.geo:extend(.history all){}
-
+.geo:extend(.history all) {}
 
 .w {
 	padding: 35px 10px;
-	color:#afe02f;
+	color: #afe02f;
 	img {
-	height: 100px;
-	width: 100px;
-    }
-    h4 {
-    	&:hover + img{
+		height: 100px;
+		width: 100px;
+	}
+	h4 {
+		&:hover+img {
 			border: 2px solid @green;
-			& + p {
+			&+p {
 				color: @green;
 			}
-    	}
-
-    }
+		}
+	}
 }
 
 .block {
@@ -196,64 +186,53 @@ a {
 	padding-bottom: 130px;
 	text-align: center;
 	p {
-      font-size: 25px;
-      color: #999;
-      margin-top: 0px;
-	margin-bottom: 15px;
-   	  a{
-      font-size: 35px;
-      word-spacing: 6px;
-      margin-right: 30px;
-	  
-	  &:last-child {
-	margin-right: 0px;
-	  }
-      }
-    }
+		font-size: 25px;
+		color: #999;
+		margin-top: 0px;
+		margin-bottom: 15px;
+		a {
+			font-size: 35px;
+			word-spacing: 6px;
+			margin-right: 30px;
+			&:last-child {
+				margin-right: 0px;
+			}
+		}
+	}
 }
-
-
 
 .tilt {
 	.transition(all 0.5s ease);
 	&:hover {
-	  .transform(scale(1.2));
+		.transform(scale(1.2));
 	}
 }
-
 
 @media (max-width: 988px) {
 	h3 {
 		font-size: 35px;
 		font-weight: 600;
-		color:green;
+		color: green;
 		text-align: center;
 	}
-
-	.history p, .geo p {
+	.history p,
+	.geo p {
 		font-size: 20px;
 		color: #709316;
 	}
-
 	.headerwrap h1 {
 		font-size: 45px;
-		
 		margin-bottom: 15px;
 	}
-
 	.headerwrap h2 {
 		font-size: 30px;
 	}
-
-	.navbar .navbar-brand  {
+	.navbar .navbar-brand {
 		font-size: 20px;
 	}
-
 	.gallery img {
-	width: 90%;
+		width: 90%;
 	}
-
-	
 	.block {
 		padding-top: 70px;
 		padding-bottom: 60px;
@@ -264,7 +243,6 @@ a {
 			}
 		}
 	}
-
 	.col-lg-4 {
 		width: 100%;
 		margin: 0;
